--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sitemap": "^2.2.29",
     "gatsby-plugin-styled-components": "^3.1.19",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
