--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.19",
+    "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-analytics": "^2.1.37",
     "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.5.4",
     "gatsby-plugin-sitemap": "^2.2.29",
     "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-sharp": "^2.4.4",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
