--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "harry-tate-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Harry Tate Portfolio",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,30 +14,32 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.19.19",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-google-analytics": "^2.1.37",
-    "gatsby-plugin-offline": "^3.0.35",
+    "babel-plugin-styled-components": "^2.0.1",
+    "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-v2": "^1.0.0",
+    "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-plugin-sitemap": "^2.2.29",
-    "gatsby-plugin-styled-components": "^3.1.19",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-remark": "^2.8.4",
-    "gatsby-transformer-sharp": "^2.4.4",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-slick": "^0.25.2",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sass": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-remark": "^5.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
+    "prettier": "^2.5.0",
     "react-image-gallery": "^1.0.6"
   },
   "repository": {
